fix page overflow

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -2,6 +2,8 @@
 @import '@styles/mixins/all';
 
 .container {
+  position: relative;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   height: 100%;
